# titsa-gtfs-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  load_realtime.pyz  pyproject.toml  requirements.txt
.github/workflows/: send_data.yml
load_realtime/: __main__.py
scripts/: generate-stops-per-line.sh  load-batch-titsa.sh  load-realtime-titsa.sh  package.sh
